networking/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-to-istio-443-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: >
        Host(`hub.example.com`) ||
        Host(`apps.hub.example.com`) ||
        Host(`api.hub.example.com`) ||
        Host(`auth.hub.example.com`) ||
        Host(`ws.hub.example.com`) ||
        Host(`storage.hub.example.com`)
      kind: Rule
      services:
        - name: istio-ingressgateway
          namespace: istio-system
          port: 443
          passHostHeader: true
          scheme: http
